--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,21 +7,23 @@
     <application
         android:name=".controller.AppController"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".UI.activity_user_dashboard"/>
         <activity android:name=".UI.activity_trivia_question" />
         <activity android:name=".UI.activity_score_board" />
-        <activity android:name=".UI.activity_sign_up" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".UI.activity_sign_up"  android:label="" android:parentActivityName=".MainActivity"/>
+
+        <activity android:name=".MainActivity" android:label="@string/mainActivityTitle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
